# CommunicationTest

./: CMakeLists.txt  ClientNormalOperationTest.cxx  ClientNormalOperationTest.h  ClientTestBase.cxx  ClientTestBase.h  CommunicationTestBase.cxx  CommunicationTestBase.h  NavigationAccidentalCommandDuringManualModeTest.cxx  NavigationAccidentalCommandDuringManualModeTest.h  NavigationCalibrationErrorTest.cxx  NavigationCalibrationErrorTest.h  NavigationEmergencyStopDuringOperationTest.cxx  NavigationEmergencyStopDuringOperationTest.h  NavigationHardwareErrorDuringOperationTest.cxx  NavigationHardwareErrorDuringOperationTest.h  NavigationMoveToWithoutTargetTest.cxx  NavigationMoveToWithoutTargetTest.h  NavigationNormalOperationTest.cxx  NavigationNormalOperationTest.h  NavigationOutOfRangeTest.cxx  NavigationOutOfRangeTest.h  NavigationStartUpErrorTest.cxx  NavigationStartUpErrorTest.h  NavigationStopDuringOperationTest.cxx  NavigationStopDuringOperationTest.h  NavigationTargetingWithoutCalibrationTest.cxx  NavigationTargetingWithoutCalibrationTest.h  NavigationTestBase.cxx  NavigationTestBase.h  NavigationTestSimulator.cxx  README.md  RobotSimulatorCalibrationPhase.cxx  RobotSimulatorCalibrationPhase.h  RobotSimulatorEmergencyPhase.cxx  RobotSimulatorEmergencyPhase.h  RobotSimulatorManualPhase.cxx  RobotSimulatorManualPhase.h  RobotSimulatorMoveToTargetPhase.cxx  RobotSimulatorMoveToTargetPhase.h  RobotSimulatorPhaseBase.cxx  (+18 more)
